complete random generated ships on computer (still have bugs like overflow + overlap)

--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,7 @@ body {
 
 
 .cruiser-preview {
- width: 40px;
+ width: 30px;
  height: 10px;
  margin: 3px;
 } 
